# eat-well

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  setup
ew/: cli.py  db.py  html.py  lookup.py  markdown.py  parser.py  recipe.py  resolution.py
ew/importers/: base.py  cnf.py  usda.py
import/: README.md
tests/: conftest.py  test_db.py  test_html.py  test_importers.py  test_lookup.py  test_markdown.py  test_parser.py  test_recipe.py  test_resolution.py
