[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eat-well"
version = "0.1.12"
description = "Nutrition and recipe planning tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
ew = "ew.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["ew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
